<resources>
    <string name="app_name">ToDoList</string>
    <string name="welcome">Bienvenido!!</string>
    <string name="begin">Ingresar</string>
    <string name="register">Registrarse</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="emailHint">Correo:</string>
    <string name="passwordHint">Contraseña:</string>
    <string name="nameHint">Nombre:</string>
    <string name="lastNameHint">Apellido</string>
    <string name="userNameHint">Nombre de usuario:</string>
    <string name="bornDateHint">Fecha de nacimiento:</string>
    <string name="confirmPasswordHint">Confirma tu contraseña:</string>
    <string name="signUp">Registrarse</string>
    <string name="required">Obligatorio</string>
    <string name="signInDescription">Inicia sesión para continuar</string>
    <string name="forgotPassword">¿Olvidaste tu contraseña?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_user">Usuario</string>
    <string name="title_users">Usuarios</string>
    <string name="ups">Ups!!</string>
    <string name="add_task">Agregar tarea</string>
    <string name="save">Guardar</string>
    <string name="title_hint">Titulo:</string>
    <string name="description_hint">Descripcion:</string>
    <string name="due_date_hint">Fecha de entrega:</string>
    <string name="tasks">Tareas</string>
    <string name="task_saved_successfully">Tu tarea se ha agregado correctamente</string>
    <string name="data_saved_successfully">Tu informacion se ha guardado correctamente</string>
</resources>