<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.todolist.presentation.ui.activities.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_addTaskFragment"
            app:destination="@id/addTaskFragment" />
        <argument
            android:name="isTaskSaved"
            app:argType="boolean"
            android:defaultValue="false" />
        <argument
            android:name="taskId"
            app:argType="string"
            android:defaultValue="@string/save" />
    </fragment>

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.example.todolist.presentation.ui.activities.ui.user.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user" />

    <fragment
        android:id="@+id/navigation_users"
        android:name="com.example.todolist.presentation.ui.activities.ui.users.UsersFragment"
        android:label="@string/title_users"
        tools:layout="@layout/fragment_users" />
    <fragment
        android:id="@+id/addTaskFragment"
        android:name="com.example.todolist.presentation.ui.activities.ui.addTask.AddTaskFragment"
        android:label="fragment_add_task"
        tools:layout="@layout/fragment_add_task" >
        <action
            android:id="@+id/action_addTaskFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>